# lazydb

./: ARCHITECTURE.md  Cargo.toml  LICENSE  README.md
database-tree/: Cargo.toml
src/: app.rs  config.rs
src/components/: command.rs  help.rs  mod.rs
src/database/: mysql.rs  postgres.rs  sqlite.rs
src/event/: events.rs
