[package]
name = "lazydb"
version = "0.1.0"
authors = ["ppdx999 <example@email.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/ppdx999/lazydb"
repository = "https://github.com/ppdx999/lazydb"
readme = "README.md"
description = "A cross-platform TUI database management tool written in Rust (Fork of TaKO8Ki/gobang)"
exclude = ["resources/"]

[workspace]
members=[
    "database-tree"
]

[dependencies]
tui = { version = "0.15.0", features = ["crossterm"], default-features = false }
crossterm = "0.20"
anyhow = "1.0.38"
unicode-width = "0.1"
sqlx = { version = "0.8.6", features = ["mysql", "postgres", "sqlite", "chrono", "runtime-tokio-rustls", "bigdecimal", "rust_decimal", "json"], default-features = false }
chrono = "0.4"
tokio = { version = "1.11.0", features = ["full"] }
futures = "0.3.5"
serde_json = "1.0"
serde = "1.0"
toml = "0.4"
strum = "0.21"
strum_macros = "0.21"
database-tree = { path = "./database-tree", version = "0.1.0" }
easy-cast = "0.4"
async-trait = "0.1.50"
itertools = "0.10.0"
rust_decimal = "1.15"
dirs-next = "2.0"
clap = "2.33.3"
structopt = "0.3.22"
syntect = { version = "4.5", default-features = false, features = ["metadata", "default-fancy"]}
unicode-segmentation = "1.7"

[target.'cfg(all(target_family="unix",not(target_os="macos")))'.dependencies]
which = "4.1"

[dev-dependencies]
pretty_assertions = "1.0.0"
