[package]
name = "database-tree"
version = "0.1.0"
authors = ["ppdx999 <example@email.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/ppdx999/lazydb"
repository = "https://github.com/ppdx999/lazydb"
readme = "README.md"
description = "Database tree structure"

[dependencies]
thiserror = "1.0"
chrono = "0.4"
anyhow = "1.0.38"
